# boot_kernel

./: Makefile  README.md  REAMDE.md  build.sh
src/: config.h  kernel.asm  kernel.c  kernel.h  linker.ld
src/boot/: ata_lba_reader_32.asm  boot.asm  protected_mode.asm
src/enigma/: enigma.c  enigma.h  keyboard.h
src/icps/: Cargo.toml
src/icps/src/: main.rs
src/idt/: idt.asm  idt.c  idt.h
src/utilities/: flags.h
src/utilities/icps/: Cargo.toml  Makefile
src/utilities/icps/src/: lib.rs  main.rs
src/utilities/idt/: idt.asm  idt.c  idt.h
src/utilities/io/: io.asm  io.h
src/utilities/keyboard/: keyboard.c  keyboard.h
src/utilities/memory/: heap.c  heap.h  kheap.c  kheap.h  memory.c  memory.h
src/utilities/stdlib/: stdlib.c  stdlib.h
src/utilities/string/: string.c  string.h
src/utilities/video/: video.c  video.h
src/utilities/video/panic/: panic.c  panic.h
src/utilities/video/print/: video.c  video.h
src/video/: video.c  video.h
utilities/idt/: idt.c
